# Chronicle

./: .env  .env.backup  .gitignore  AI助手推送日报功能说明.md  README.md  env.example  icon-generator.html  index.html  index.tsx.backup  package-lock.json  package.json  vite.config.ts  功能锦囊.md  日报部署说明.md
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/board/: Column.tsx  TaskCard.tsx
src/components/chat/: ChatSidebar.tsx
src/components/common/: Modal.tsx  PriorityBadge.tsx  TagPill.tsx
src/components/icons/: index.tsx
src/components/modals/: AISettingsModal.tsx  AlertDialog.tsx  ConfirmDialog.tsx  EventDetailModal.tsx  MergeSettingsModal.tsx  PatInputModal.tsx  PromptEditorModal.tsx  RPGDetailModal.tsx  ReportPathSettingsModal.tsx  ReportSettingsModal.tsx  SuggestionsModal.tsx  TaskDetailModal.tsx
src/constants/: index.ts
src/types/: index.ts
src/utils/: aiAnalyzer.ts  aiClient.ts  aiSettings.ts  contentMerger.ts  dataMigration.ts  database.ts  embeddingManager.ts  githubConfig.ts  helpers.ts  insightsAnalyzer.ts  migrationHelper.ts  reportFilters.ts  screenpipe.ts  storage.ts  taskAnalyzer.ts
src/views/: BoardView.tsx  InsightsView.tsx  TimelineView.tsx
日报/: 2026.01.14.md  2026.01.16.md  AIEC_日报上传.command  push_my_log.py
